--- a/.github/workflows/seam-carving.yml
+++ b/.github/workflows/seam-carving.yml
@@ -10,37 +10,10 @@ jobs:
     steps:
     - uses: actions/checkout@v1
       with: 
-        submodules: recursive
-    - name: Prepare build dir
-      run: mkdir build
+        submodules: true
     - name: Generate build files using cmake
-      run: cmake ..
-      working-directory: ./build
+      run: cmake CMakeLists.txt
     - name: Run make
       run: make
-      working-directory: ./build
     - name: Run tests
-      run: ./test/runUnitTests
-      working-directory: ./build
-    - name: Prepare ASAN build dir
-      run: mkdir build_asan
-    - name: Generate ASAN build files using cmake
-      run: cmake .. -DCMAKE_BUILD_TYPE=ASAN
-      working-directory: ./build_asan
-    - name: Run make
-      run: make
-      working-directory: ./build_asan
-    - name: Run tests
-      run: ./test/runUnitTests
-      working-directory: ./build_asan
-    - name: Prepare USAN build dir
-      run: mkdir build_usan
-    - name: Generate USAN build files using cmake
-      run: cmake .. -DCMAKE_BUILD_TYPE=USAN
-      working-directory: ./build_usan
-    - name: Run make
-      run: make
-      working-directory: ./build_usan
-    - name: Run tests
-      run: ./test/runUnitTests
-      working-directory: ./build_usan
+      run: ./runUnitTests
